--- a/index.html
+++ b/index.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Logan</title>
+  <title>WDD 131 - Dynamic Web Fundamentals - Logan Muncey</title>
+  <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Logan Muncey - Information about me and where I live">
+  <meta name="author" content="Logan Muncey">
+  <link rel="stylesheet" href="styles/base.css">
+  <script src="scripts/getdates.js" defer></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=IBM+Plex+Serif:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-  <h1>Logan</h1>
+  <header>
+    <h1><span id="course-title">WDD 131 - Dynamic Web Fundamentals</span></h1>
+    <nav>
+      <a href="https://www.linkedin.com/in/logan-muncey" target="_blank">LinkedIn</a>
+      <a href="https://byupw.instructure.com" target="_blank">Canvas</a>
+      <a href="https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/122?lang=eng" target="_blank">Scripture</a>
+      <a href="#" target="_blank">Final Project</a>
+    </nav>
+  </header>
+  <main>
+    <h1>Logan Muncey</h1>
+    <section class="card me">
+      <h2>About Me</h2>
+      <img src="images/profile.jpg" alt="Photo of Logan Muncey" width="200">
+      <p>Hi! My name is Logan Muncey. I am from Salt Lake City, Utah, USA. 
+        I love many sports including football, hockey, basketball, and volleyball.
+        I have five siblings and three step-siblings. I have a degree in Graphic Design
+        from the University of Utah. I served a mission in Mexico.</p>
+    </section>
+    <section class="card">
+      <p>Some text to use as a placeholder.</p>
+    </section>
+  </main>
+  <footer>
+    <p>&copy;<span id="currentyear"></span> 🔸 Logan Muncey 🔸 USA</p>
+    Last Modified: <p id="lastModified"></p>
+  </footer>
 </body>
 </html>
