--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <header>
-    <h1><span id="course-title">WDD 131 - Dynamic Web Fundamentals</span></h1>
+    <span id="course-title">WDD 131 - Dynamic Web Fundamentals</span>
     <nav>
       <a href="https://www.linkedin.com/in/logan-muncey" target="_blank">LinkedIn</a>
       <a href="https://byupw.instructure.com" target="_blank">Canvas</a>
@@ -28,19 +28,28 @@
     <h1>Logan Muncey</h1>
     <section class="card me">
       <h2>About Me</h2>
-      <img src="images/profile.jpg" alt="Photo of Logan Muncey" width="200">
-      <p>Hi! My name is Logan Muncey. I am from Salt Lake City, Utah, USA. 
-        I love many sports including football, hockey, basketball, and volleyball.
-        I have five siblings and three step-siblings. I have a degree in Graphic Design
-        from the University of Utah. I served a mission in Mexico.</p>
+      <div>
+        <img src="images/profile.jpg" alt="Photo of Logan Muncey" width="200">
+        <p>Hi! My name is Logan Muncey. I am from Salt Lake City, Utah, USA. 
+          I love many sports including football, hockey, basketball, and volleyball.
+          I have five siblings and three step-siblings. I have a degree in Graphic Design
+          from the University of Utah. I served a mission in Mexico.</p>
+      </div>
     </section>
-    <section class="card">
-      <p>Some text to use as a placeholder.</p>
+    <section class="card resources">
+      <h2>Resources</h2>
+      <ul>
+        <li><a href="https://squoosh.app" target="_blank">Squoosh</a></li>
+        <li><a href="https://flexboxfroggy.com" target="_blank">Flexbox Froggy</a></li>
+        <li><a href="https://cssgridgarden.com" target="_blank">Grid Garden</a></li>
+
+      </ul>
     </section>
   </main>
   <footer>
     <p>&copy;<span id="currentyear"></span> 🔸 Logan Muncey 🔸 USA</p>
-    Last Modified: <p id="lastModified"></p>
+    <p>Last Modified:</p>
+    <p id="lastModified"></p>
   </footer>
 </body>
 </html>
