--- a/index.html
+++ b/index.html
@@ -28,12 +28,16 @@
     <h1>Logan Muncey</h1>
     <section class="card me">
       <h2>About Me</h2>
-      <div>
+      <div class="logan">
         <img src="images/profile.jpg" alt="Photo of Logan Muncey" width="200">
         <p>Hi! My name is Logan Muncey. I am from Salt Lake City, Utah, USA. 
           I love many sports including football, hockey, basketball, and volleyball.
           I have five siblings and three step-siblings. I have a degree in Graphic Design
           from the University of Utah. I served a mission in Mexico.</p>
+      </div>
+      <div class="utah">
+        <img src="images/utahflag.jpg" alt="State Flag of Utah" width="200">
+        <p>This is the flag of the state of Utah. It has a beehive because Utah is known as the Beehive State. It also depicts the mountains that Utah is well known for, as well as the red rocks that are found in the southern part of the state.</p>
       </div>
     </section>
     <section class="card resources">
@@ -42,13 +46,11 @@
         <li><a href="https://squoosh.app" target="_blank">Squoosh</a></li>
         <li><a href="https://flexboxfroggy.com" target="_blank">Flexbox Froggy</a></li>
         <li><a href="https://cssgridgarden.com" target="_blank">Grid Garden</a></li>
-
       </ul>
     </section>
   </main>
   <footer>
     <p>&copy;<span id="currentyear"></span> 🔸 Logan Muncey 🔸 USA</p>
-    <p>Last Modified:</p>
     <p id="lastModified"></p>
   </footer>
 </body>
